# realtime-fraud-feature-store

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  interview_bait_guide.md  interview_defense.md  load_bronze_to_postgres.py  pyproject.toml
.github/workflows/: ci.yml
docs/: fraud_architecture_dashboard.html  fraud_data_journey_scrollytelling.html
docs/ADRs/: 001-batch-dbt-vs-streaming-flink-for-feature-aggregation.md
docs/adr/: 001-kafka-kraft-mode.md  002-004-006-combined.md  005-decimal-not-float.md  007-dbt-quality-gate.md
feature_store/src/: api.py  loader.py  mock_ml_scorer.py
infra/debezium/: postgres-source.json  register-connector.sh
infra/postgres/init/: 01_reference_tables.sql
infra/terraform-aws-freetier/: main.tf
ingestion/transaction_generator/src/: backfill.py  generator.py  kafka_producer.py  profiles.py  run.py  schemas.py  seed_reference.py  test_profiles.py  test_schemas.py
orchestration/airflow/dags/: .user.yml  airflow_profiles.yml  fraud_pipeline_dag.py
realtime_fraud_feature_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_demo.sh
streaming/spark/src/: bronze_ingest.py  config.py
warehouse/dbt/fraud_warehouse/: .user.yml  README.md  dbt_project.yml  profiles.yml
warehouse/dbt/fraud_warehouse/macros/: test_not_future_timestamp.sql  test_positive_value.sql  test_value_in_range.sql
warehouse/dbt/fraud_warehouse/models/data_quality/: _data_quality.yml  dq_pipeline_health.sql  recon_bronze_silver.sql
warehouse/dbt/fraud_warehouse/models/gold/: _gold_models.yml  gold_daily_merchant_stats.sql  gold_user_fraud_features.sql
warehouse/dbt/fraud_warehouse/models/staging/: _reference_sources.yml  _sources.yml  _stg_reference.yml  _stg_transactions.yml  stg_merchants.sql  stg_transactions.sql  stg_users.sql
warehouse/dbt/fraud_warehouse/snapshots/: snp_merchants.sql  snp_users.sql
